# HexaLab_V1

./: README.md
Backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Backend/app/: api.py  config.py  core_logging.py  models.py  worker.py
Backend/data/: cve_report.json  sbom.cdx.json
Backend/hexalab_sbom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Backend/sbom/: sbom_engine.py
Backend/tests/: test_api_client.py  test_api_import.py  test_sanity.py  test_worker_import.py
Frontend/: index.html
Frontend/src/: App.css  App.jsx
