[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexalab-sbom"
version = "0.1.0"
description = "SBOM scanning and reporting API"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "celery",
    "redis",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = ["app", "sbom"]
